# spt-shell-notify

./: Cargo.toml  README.md  manifest.toml
src/: main.rs
